--- a/Lin Out/Base.lproj/Main.storyboard
+++ b/Lin Out/Base.lproj/Main.storyboard
@@ -15,28 +15,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="31" translatesAutoresizingMaskIntoConstraints="NO" id="jdo-ou-9co">
-                                <rect key="frame" x="0.0" y="76" width="414" height="271"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="jdo-ou-9co">
+                                <rect key="frame" x="0.0" y="76" width="414" height="278"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="appLogo" translatesAutoresizingMaskIntoConstraints="NO" id="TVd-YX-4bR">
-                                        <rect key="frame" x="167" y="0.0" width="80" height="80"/>
+                                        <rect key="frame" x="147" y="0.0" width="120" height="120"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="80" id="1WQ-8h-HAL"/>
-                                            <constraint firstAttribute="height" constant="80" id="GGI-Ob-azK"/>
+                                            <constraint firstAttribute="width" constant="120" id="1WQ-8h-HAL"/>
+                                            <constraint firstAttribute="height" constant="120" id="GGI-Ob-azK"/>
                                         </constraints>
                                     </imageView>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="e6b-rm-eX7" userLabel="UserNameInput">
-                                        <rect key="frame" x="10" y="111" width="394" height="34"/>
+                                        <rect key="frame" x="10" y="140" width="394" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uvh-nG-9jQ" userLabel="PasswordInput">
-                                        <rect key="frame" x="10" y="176" width="394" height="34"/>
+                                        <rect key="frame" x="10" y="194" width="394" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="104" translatesAutoresizingMaskIntoConstraints="NO" id="DCw-mf-Luj">
-                                        <rect key="frame" x="55" y="241" width="304" height="30"/>
+                                        <rect key="frame" x="55" y="248" width="304" height="30"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pfg-2e-Zwy">
                                                 <rect key="frame" x="0.0" y="0.0" width="100" height="30"/>
@@ -62,14 +62,11 @@
                                     </stackView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="uvh-nG-9jQ" secondAttribute="trailing" constant="10" id="6WJ-8T-bwg"/>
-                                    <constraint firstItem="e6b-rm-eX7" firstAttribute="leading" secondItem="jdo-ou-9co" secondAttribute="leading" constant="10" id="Foh-Ug-fei"/>
-                                    <constraint firstItem="uvh-nG-9jQ" firstAttribute="leading" secondItem="jdo-ou-9co" secondAttribute="leading" constant="10" id="FsM-Q0-G4z"/>
-                                    <constraint firstAttribute="trailing" secondItem="e6b-rm-eX7" secondAttribute="trailing" constant="10" id="Yub-1h-mM5"/>
-                                    <constraint firstItem="e6b-rm-eX7" firstAttribute="top" secondItem="TVd-YX-4bR" secondAttribute="bottom" constant="10" id="ZXN-7S-4Ho"/>
-                                    <constraint firstItem="TVd-YX-4bR" firstAttribute="top" secondItem="jdo-ou-9co" secondAttribute="top" id="cJg-iP-3Nu"/>
-                                    <constraint firstItem="uvh-nG-9jQ" firstAttribute="top" secondItem="e6b-rm-eX7" secondAttribute="bottom" constant="10" id="d6j-KE-4fr"/>
-                                    <constraint firstItem="TVd-YX-4bR" firstAttribute="centerX" secondItem="jdo-ou-9co" secondAttribute="centerX" id="soG-8t-Nih"/>
+                                    <constraint firstAttribute="trailing" secondItem="uvh-nG-9jQ" secondAttribute="trailing" constant="10" id="5K2-Z8-lIK"/>
+                                    <constraint firstAttribute="trailing" secondItem="e6b-rm-eX7" secondAttribute="trailing" constant="10" id="84a-fp-2ip"/>
+                                    <constraint firstItem="e6b-rm-eX7" firstAttribute="leading" secondItem="jdo-ou-9co" secondAttribute="leading" constant="10" id="Pfv-Y3-reY"/>
+                                    <constraint firstItem="TVd-YX-4bR" firstAttribute="centerX" secondItem="jdo-ou-9co" secondAttribute="centerX" id="R1F-dF-3i8"/>
+                                    <constraint firstItem="uvh-nG-9jQ" firstAttribute="leading" secondItem="jdo-ou-9co" secondAttribute="leading" constant="10" id="eti-tJ-s5Y"/>
                                 </constraints>
                             </stackView>
                         </subviews>
