--- a/Lin Out/Base.lproj/Main.storyboard
+++ b/Lin Out/Base.lproj/Main.storyboard
@@ -7,36 +7,40 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Lin_Out" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="Lin_Out" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="jdo-ou-9co">
-                                <rect key="frame" x="0.0" y="76" width="414" height="278"/>
+                                <rect key="frame" x="27" y="76" width="360" height="278"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="appLogo" translatesAutoresizingMaskIntoConstraints="NO" id="TVd-YX-4bR">
-                                        <rect key="frame" x="147" y="0.0" width="120" height="120"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1hc-tb-mmO">
+                                        <rect key="frame" x="120" y="0.0" width="120" height="120"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="120" id="1WQ-8h-HAL"/>
-                                            <constraint firstAttribute="height" constant="120" id="GGI-Ob-azK"/>
+                                            <constraint firstAttribute="width" constant="120" id="A5C-Nh-1Fk"/>
+                                            <constraint firstAttribute="height" constant="120" id="wtb-yu-olC"/>
                                         </constraints>
-                                    </imageView>
+                                        <state key="normal" image="appLogo"/>
+                                        <connections>
+                                            <action selector="appLogoPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5fp-Ff-5SI"/>
+                                        </connections>
+                                    </button>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="e6b-rm-eX7" userLabel="UserNameInput">
-                                        <rect key="frame" x="10" y="140" width="394" height="34"/>
+                                        <rect key="frame" x="10" y="140" width="340" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="emailAddress" textContentType="email"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uvh-nG-9jQ" userLabel="PasswordInput">
-                                        <rect key="frame" x="10" y="194" width="394" height="34"/>
+                                        <rect key="frame" x="10" y="194" width="340" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                     </textField>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="104" translatesAutoresizingMaskIntoConstraints="NO" id="DCw-mf-Luj">
-                                        <rect key="frame" x="55" y="248" width="304" height="30"/>
+                                        <rect key="frame" x="28" y="248" width="304" height="30"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pfg-2e-Zwy">
                                                 <rect key="frame" x="0.0" y="0.0" width="100" height="30"/>
@@ -47,6 +51,9 @@
                                                 <state key="normal" title="Login">
                                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="loginPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="o2L-OK-mZY"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JWD-L0-00F">
                                                 <rect key="frame" x="204" y="0.0" width="100" height="30"/>
@@ -57,6 +64,9 @@
                                                 <state key="normal" title="Cancel">
                                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="cancelPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Yvh-De-KqA"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -64,20 +74,24 @@
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="uvh-nG-9jQ" secondAttribute="trailing" constant="10" id="5K2-Z8-lIK"/>
                                     <constraint firstAttribute="trailing" secondItem="e6b-rm-eX7" secondAttribute="trailing" constant="10" id="84a-fp-2ip"/>
+                                    <constraint firstAttribute="width" constant="360" id="E1l-po-GbM"/>
                                     <constraint firstItem="e6b-rm-eX7" firstAttribute="leading" secondItem="jdo-ou-9co" secondAttribute="leading" constant="10" id="Pfv-Y3-reY"/>
-                                    <constraint firstItem="TVd-YX-4bR" firstAttribute="centerX" secondItem="jdo-ou-9co" secondAttribute="centerX" id="R1F-dF-3i8"/>
                                     <constraint firstItem="uvh-nG-9jQ" firstAttribute="leading" secondItem="jdo-ou-9co" secondAttribute="leading" constant="10" id="eti-tJ-s5Y"/>
+                                    <constraint firstItem="1hc-tb-mmO" firstAttribute="centerX" secondItem="jdo-ou-9co" secondAttribute="centerX" id="zor-cg-YED"/>
                                 </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="jdo-ou-9co" secondAttribute="trailing" id="HBe-8y-xxd"/>
                             <constraint firstItem="jdo-ou-9co" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="32" id="K5t-rW-Ptc"/>
-                            <constraint firstItem="jdo-ou-9co" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="qpW-es-wBS"/>
+                            <constraint firstItem="jdo-ou-9co" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qUU-33-6AB"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="tfPassword" destination="uvh-nG-9jQ" id="RQt-su-MrL"/>
+                        <outlet property="tfUserName" destination="e6b-rm-eX7" id="hww-gz-wx1"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
