--- a/Lin Out/Base.lproj/LaunchScreen.storyboard
+++ b/Lin Out/Base.lproj/LaunchScreen.storyboard
@@ -19,7 +19,7 @@
                                 <rect key="frame" x="122" y="363" width="170.5" height="170.5"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="AR1-PZ-pB5" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="C8V-C8-PmI"/>
                             <constraint firstItem="AR1-PZ-pB5" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="O4u-VE-gaT"/>
@@ -29,7 +29,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="-8586" y="436"/>
         </scene>
     </scenes>
     <resources>
