--- a/Lin Out/Base.lproj/Main.storyboard
+++ b/Lin Out/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="mgr-sb-fjA">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
@@ -7,6 +7,64 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Launcher View Controller-->
+        <scene sceneID="xnT-fd-Dry">
+            <objects>
+                <viewController id="mgr-sb-fjA" customClass="LauncherViewController" customModule="Lin_Out" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="KVC-gz-w78">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="appLogo" translatesAutoresizingMaskIntoConstraints="NO" id="QYZ-Jg-sVe">
+                                <rect key="frame" x="147" y="388" width="120" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="40k-lX-DkE"/>
+                                    <constraint firstAttribute="height" constant="120" id="vCl-Eq-JDi"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="QYZ-Jg-sVe" firstAttribute="centerY" secondItem="KVC-gz-w78" secondAttribute="centerY" id="CPf-kI-0Oq"/>
+                            <constraint firstItem="QYZ-Jg-sVe" firstAttribute="centerX" secondItem="KVC-gz-w78" secondAttribute="centerX" id="fHU-Rw-7nU"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="urU-cM-8np"/>
+                    </view>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="presentation" identifier="goToLogin" modalPresentationStyle="fullScreen" id="fGr-cN-jj9"/>
+                        <segue destination="j0Y-O6-SaD" kind="presentation" identifier="goToSignIn" modalPresentationStyle="fullScreen" id="h6M-lF-Wdi"/>
+                        <segue destination="mGi-ld-XvL" kind="presentation" identifier="goToSignOut" modalPresentationStyle="fullScreen" id="ioE-cx-LmD"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="j5P-DP-KaL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1677" y="94"/>
+        </scene>
+        <!--Sign Out View Controller-->
+        <scene sceneID="42K-uL-aLa">
+            <objects>
+                <viewController id="mGi-ld-XvL" customClass="SignOutViewController" customModule="Lin_Out" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ZtW-6C-RM3">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Sign out Screen" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Kq-M3-33Y">
+                                <rect key="frame" x="186" y="438" width="122" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="Qko-DG-lJz"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="aMK-cl-bHz"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="El9-qd-Wd3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-530" y="552"/>
+        </scene>
         <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -81,24 +139,140 @@
                                 </constraints>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="jdo-ou-9co" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="32" id="K5t-rW-Ptc"/>
                             <constraint firstItem="jdo-ou-9co" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qUU-33-6AB"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="mkw-FD-hqH"/>
                     <connections>
+                        <outlet property="cancelButton" destination="JWD-L0-00F" id="qqL-Zr-TFo"/>
+                        <outlet property="loginButton" destination="pfg-2e-Zwy" id="nNO-IJ-Job"/>
                         <outlet property="tfPassword" destination="uvh-nG-9jQ" id="RQt-su-MrL"/>
                         <outlet property="tfUserName" destination="e6b-rm-eX7" id="hww-gz-wx1"/>
+                        <segue destination="j0Y-O6-SaD" kind="presentation" identifier="loginToSignIn" modalPresentationStyle="fullScreen" id="C3c-E9-kCR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="94.419642857142847"/>
+            <point key="canvasLocation" x="-530" y="-349"/>
+        </scene>
+        <!--Sign In View Controller-->
+        <scene sceneID="EDv-3h-gk6">
+            <objects>
+                <viewController id="j0Y-O6-SaD" customClass="SignInViewController" customModule="Lin_Out" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Wl2-mN-49k">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="23V-FF-ho3">
+                                <rect key="frame" x="20" y="64" width="374" height="118"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E6p-CA-C6u">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="32"/>
+                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="32" id="qEg-2y-pUu"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Adu-lO-p1T">
+                                        <rect key="frame" x="0.0" y="42" width="374" height="32"/>
+                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="32" id="KJm-FW-8HM"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Customer Id" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uTF-yP-txz">
+                                        <rect key="frame" x="0.0" y="84" width="374" height="34"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="32" id="bxw-KX-DgF"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="E6p-CA-C6u" firstAttribute="top" secondItem="23V-FF-ho3" secondAttribute="top" id="Hco-xw-KLy"/>
+                                    <constraint firstAttribute="trailing" secondItem="Adu-lO-p1T" secondAttribute="trailing" id="Jsq-2A-Qpg"/>
+                                    <constraint firstItem="Adu-lO-p1T" firstAttribute="leading" secondItem="23V-FF-ho3" secondAttribute="leading" id="NwB-Fb-YMS"/>
+                                    <constraint firstAttribute="trailing" secondItem="E6p-CA-C6u" secondAttribute="trailing" id="aTj-WR-Knw"/>
+                                    <constraint firstItem="uTF-yP-txz" firstAttribute="leading" secondItem="23V-FF-ho3" secondAttribute="leading" id="fnZ-Wc-vpV"/>
+                                    <constraint firstItem="E6p-CA-C6u" firstAttribute="leading" secondItem="23V-FF-ho3" secondAttribute="leading" id="kTd-4B-Whb"/>
+                                    <constraint firstAttribute="trailing" secondItem="uTF-yP-txz" secondAttribute="trailing" id="ohf-5B-oiE"/>
+                                </constraints>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="POs-5K-zcG" customClass="RoundButton" customModule="Lin_Out" customModuleProvider="target">
+                                <rect key="frame" x="107" y="222" width="200" height="200"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="IFx-ru-UbC"/>
+                                    <constraint firstAttribute="height" constant="200" id="YfE-2R-6hH"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="NotoNastaliqUrdu-Bold" family="Noto Nastaliq Urdu" pointSize="29"/>
+                                <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Sign In">
+                                    <color key="titleColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadious">
+                                        <real key="value" value="100"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                        <color key="value" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                        <real key="value" value="2"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CMS-OJ-EuR" customClass="RoundButton" customModule="Lin_Out" customModuleProvider="target">
+                                <rect key="frame" x="20" y="442" width="374" height="40"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Iz9-de-Bwy"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Log Out"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadious">
+                                        <real key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="23V-FF-ho3" firstAttribute="top" secondItem="vP3-m2-b6i" secondAttribute="top" constant="20" id="BXr-ER-vnK"/>
+                            <constraint firstItem="POs-5K-zcG" firstAttribute="top" secondItem="23V-FF-ho3" secondAttribute="bottom" constant="40" id="Gta-g8-VO0"/>
+                            <constraint firstItem="CMS-OJ-EuR" firstAttribute="leading" secondItem="vP3-m2-b6i" secondAttribute="leading" constant="20" id="M4s-3a-g3C"/>
+                            <constraint firstItem="CMS-OJ-EuR" firstAttribute="top" secondItem="POs-5K-zcG" secondAttribute="bottom" constant="20" id="PRG-X4-z7U"/>
+                            <constraint firstItem="23V-FF-ho3" firstAttribute="leading" secondItem="Wl2-mN-49k" secondAttribute="leading" constant="20" id="ZDq-tx-G24"/>
+                            <constraint firstItem="vP3-m2-b6i" firstAttribute="trailing" secondItem="23V-FF-ho3" secondAttribute="trailing" constant="20" id="a4i-no-6Jr"/>
+                            <constraint firstItem="POs-5K-zcG" firstAttribute="centerX" secondItem="Wl2-mN-49k" secondAttribute="centerX" id="bhU-K8-2YJ"/>
+                            <constraint firstItem="vP3-m2-b6i" firstAttribute="trailing" secondItem="CMS-OJ-EuR" secondAttribute="trailing" constant="20" id="qzX-Op-AsQ"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="vP3-m2-b6i"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="7Dk-dp-8bm"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="K07-mI-r0a" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="579.71014492753625" y="93.75"/>
         </scene>
     </scenes>
     <resources>
         <image name="appLogo" width="170.5" height="170.5"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="h6M-lF-Wdi"/>
+    </inferredMetricsTieBreakers>
 </document>
